search gap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ body {
   .navbar .navbarContainer {
     display: flex;
     flex-direction: column;
-    gap: 2rem; }
+    gap: 0.6rem; }
     .navbar .navbarContainer .navbarInitial {
       display: flex;
       justify-content: space-between;
