--- a/sass/page/_navbar.scss
+++ b/sass/page/_navbar.scss
@@ -9,7 +9,7 @@
   .navbarContainer {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 0.6rem;
 
     .navbarInitial {
       display: flex;
